# blfmt

./: .gitignore  .rustc_info.json  Cargo.toml  LICENSE  README.md  another.txt  check_ast_status.py  cpp_ex.cpp  cpp_ex1.cpp  cpp_ex2.cpp  cpp_ex3.cpp  cpp_ex4.cpp  cpp_ex5.cpp  dedup.sh  diffs  ex0.c  ex1.c  ex2.c  ex3.c  example.txt  example_file.c  example_file.cpp  example_file.go  example_file2.cpp  example_file3.cpp  example_header.h  go.mod  languages.swift  main.go  match.sh  mine  output  output.txt  rs_ex1.rs  rs_ex2.rs  safe.cpp  safe_cpp_ex.cpp  safe_cpp_example2.cpp  safe_cpp_example3.cpp  safe_cpp_example4.cpp  (+13 more)
NodeStorage/: nodes.json
safe/: safe1.txt
src/: ast.rs  c_ast.rs  c_format.rs  c_format2.rs  cpp_ast.rs  cpp_format.rs  file_type.rs  format.rs  group.rs  grouping.rs  groups.rs  main.rs  options.rs  parser.rs  processing.rs  restore.rs  rs_format.rs  text_file.rs  txt_format.rs  utils.rs
src/non-code/: list-of-file-ext.txt  safe.txt
