[package]
name = "blfmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.5"
tree-sitter = "0.23.0"
tree-sitter-c = "0.23.0"
tree-sitter-cpp = "0.23.0"

[build-dependencies]
cc = "1.1.16"
